After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723402 - widget: Fix set_focus_child handling during focus changes
widget: Fix set_focus_child handling during focus changes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-02-01 00:06 UTC by Olivier Brunel (jjacky)
Modified: 2014-02-04 02:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
widget: Fix set_focus_child handling during focus changes (1.41 KB, patch)
2014-02-01 00:06 UTC, Olivier Brunel (jjacky)
committed Details | Review

Description Olivier Brunel (jjacky) 2014-02-01 00:06:28 UTC
Created attachment 267766 [details] [review]
widget: Fix set_focus_child handling during focus changes

10b5ec20 made sure not to set focus_child to NULL all the way up to the
top, but only up to the common ancestor. However, it would never set it
on the common ancestor itself, which would therefore remain with a
focus_child set when it shouldn't.

A manifestation of the bug: focus column headers of a treeview, press Tab.
Now pressing Shift+Tab will go to another widget and not the column
headers, and Tab will (appear to) do nothing, all because the treeview
still has a focus_child set to column headers after a grab_focus().
Comment 1 Matthias Clasen 2014-02-04 02:33:41 UTC
Attachment 267766 [details] pushed as a8d72a9 - widget: Fix set_focus_child handling during focus changes